chores: clarity angular

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@cds/core": "^6.2.3",
+    "@clr/angular": "^13.11.1",
+    "@clr/ui": "^13.11.1",
     "@nrwl/angular": "15.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
