--- a/apps/seed/.eslintrc.json
+++ b/apps/seed/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "nxVmware",
+            "prefix": "seed",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "nx-vmware",
+            "prefix": "seed",
             "style": "kebab-case"
           }
         ]
