--- a/apps/seed/project.json
+++ b/apps/seed/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/seed/src",
-  "prefix": "nx-vmware",
+  "prefix": "seed",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
